[package]
name = "project-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
